tests for linearize

--- a/duplicateFilesDueToIframes/duplicateFilesDueToIframes.html
+++ b/duplicateFilesDueToIframes/duplicateFilesDueToIframes.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="simple/scriptTagJSProject/a.js"></script>
+<script src="a.js"></script>
 </head>
 <body>
 <h1>Look at the file list in the Script Panel of Web Inspector</h1>
