--- a/StrictPoisonPill.html
+++ b/StrictPoisonPill.html
@@ -3,7 +3,7 @@
 <script>
 'use strict';
 function complicated() {
-  console.log("What are these arguments", arguments);
+  console.log("What are these arguments?", arguments);
 }
 complicated("a string", window);
 </script>
